tests/ui/thread-local/thread-local-mutation.stderr
error[E0594]: cannot assign to immutable static item `S`
  --> $DIR/thread-local-mutation.rs:11:5
   |
LL |     S = "after";
   |     ^^^^^^^^^^^ cannot assign

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0594`.
